<resources>
    <string name="app_name">Kotlin Quiz</string>
    <string name="code_quiz">Kotlin Code Quiz</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="please_enter_your_name">Please Enter your Name</string>
    <string name="welcome">Welcome</string>
    <string name="submit">Submit</string>
    <string name="FINISH">FINISH</string>
    <string name="next">NEXT</string>
    <string name="result">Result</string>
    <string name="congratulations">Congratulations</string>
    <string name="congrats">Congratulations!</string>
    <string name="username">UserName</string>
    <string name="quiz">What Country does this flag belong to</string>
    <string name="color_black">#000000</string>
    <string name="enter_name">Please enter your name!</string>
</resources>