<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:background="@color/purple_200"
    android:gravity="center_horizontal"
    android:padding="20dp">
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/ivTrophy"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:contentDescription="@string/congratulations"
        android:src="@drawable/trophy3"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/tvCongratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/congrats"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        tools:text="@string/username"/>
    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        tools:text="Your score is 8 out of 8"
        />
    <Button
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/FINISH"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="10dp"
        android:backgroundTint="@color/white"
        tools:targetApi="lollipop" />


</LinearLayout>