<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuestionsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvQuiz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="22sp"
            android:text="@string/quiz"
            android:textColor="@color/colorBlack"/>
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/app_name"
            />
        <LinearLayout
            android:id="@+id/progressDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            >
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="8"
                android:minHeight="50dp"
                android:progress="0"
                android:indeterminate="false"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                />
            <TextView
                android:id="@+id/tvProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:textColorHint="@color/colorGrey"
                android:textSize="14sp"
                tools:text="0/10"/>


        </LinearLayout>

        <TextView
            android:id="@+id/tvOptionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:background="@drawable/quiz_option_bg"
            android:textColor="@color/colorGrey"
            android:textSize="18sp"
            android:text=""/>
        <TextView
            android:id="@+id/tvOptionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:background="@drawable/quiz_option_bg"
            android:textColor="@color/colorGrey"
            android:textSize="18sp"
            android:text=""/>
        <TextView
            android:id="@+id/tvOptionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:background="@drawable/quiz_option_bg"
            android:textColor="@color/colorGrey"
            android:textSize="18sp"
            android:text=""/>
        <TextView
            android:id="@+id/tvOptionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:background="@drawable/quiz_option_bg"
            android:textColor="@color/colorGrey"
            android:textSize="18sp"
            android:text=""/>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/purple_200"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </LinearLayout>

</ScrollView>